<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Core Security Operations -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_clock_in_out"
            android:icon="@drawable/ic_clock"
            android:title="@string/menu_clock_in_out" />
        <item
            android:id="@+id/nav_incident_log"
            android:icon="@drawable/ic_incident"
            android:title="@string/menu_incident_log" />
    </group>

    <!-- Administration -->
    <item android:title="@string/menu_section_administration">
        <menu>
            <item
                android:id="@+id/nav_admin"
                android:icon="@drawable/ic_admin"
                android:title="@string/menu_admin" />
        </menu>
    </item>

    <!-- Account Management -->
    <item android:title="@string/menu_section_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>