<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- Core Security Operations -->
    <fragment
        android:id="@+id/nav_home"
        android:name="za.co.skyner.estateguard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_clock_in_out"
        android:name="za.co.skyner.estateguard.ui.clockinout.ClockInOutFragment"
        android:label="@string/menu_clock_in_out"
        tools:layout="@layout/fragment_clock_in_out" />

    <fragment
        android:id="@+id/nav_incident_log"
        android:name="za.co.skyner.estateguard.ui.incident.IncidentLogFragment"
        android:label="@string/menu_incident_log"
        tools:layout="@layout/fragment_incident_log" />

    <!-- Administration -->
    <fragment
        android:id="@+id/nav_admin"
        android:name="za.co.skyner.estateguard.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />


</navigation>